Fix popup not showing when saving changes

--- a/editor/assets/style.css
+++ b/editor/assets/style.css
@@ -357,3 +357,31 @@ code {
   padding: 20px;
   border-radius: 10px;
 }
+
+#popup {
+  display: none;
+  position: fixed;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.75);
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+#popup.active {
+  display: flex;
+  animation: popup .5s;
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
